# edge-snn-robot-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
deploy/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: bom_budget.md  bom_pro.md  index.md  metrics.md  mkdocs.yml  safety.md
eval/: energy_metrics.py  latency_bench.py  plots.py  soak_test_v0.2.py  train_loop.py
examples/: dashboard.html  streaming_client.py
firmware/esp32/: README.md
firmware/openmv/: line_follow.py
matlab_simulator/: ROBOT_HAND_GUIDE.md  RobotArmSimulator.m  RobotHandSimulator.m  run_hand_simulator.m  run_simulator.m
notebooks/: getting_started.ipynb
ros2_ws/: Dockerfile.ros2  README.md  __init__.py  ros_entrypoint.sh  setup.sh
ros2_ws/deploy/: docker-compose.yml
ros2_ws/src/: README.md  config.py  ros2_bridge.py
ros2_ws/src/edge_snn_robot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/edge_snn_robot/config/: robot_params.yaml
ros2_ws/src/edge_snn_robot/edge_snn_robot/: emg_intent_node.py  fake_hardware.py  servo_cmd_node.py
ros2_ws/src/edge_snn_robot/launch/: robot_control.launch.py
ros2_ws/src/edge_snn_robot/msg/: Intent.msg  JointCmd.msg
ros2_ws/src/edge_snn_robot/resource/: edge_snn_robot
ros2_ws/src/edge_snn_robot/scripts/: minimal_node.py  setup_jetson.sh
scripts/: build_trt_engine_v0_2s.py  compare_models.py  compare_onnx_vs_pt.py  download_data.py  export_onnx.py  export_onnx_emg_models.py  export_onnx_v0_2s.py  inference_spiking_tcn.py  make_mini_mat.py  onnx_model_eval.py  test_camera.py  test_emg_model.py  test_onnx_v0_2s.py  train_ninapro_offline.py
src/: config.py
src/control/: controller.py
src/emg_io/: emg_stream.py  encoders.py  spiking_tcn_onnx_wrapper.py  vision_camera.py
src/emg_io/data_src/: emg_dataset.py  ninapro.py
src/infer_server/: README.md  STREAMING_API.md  app.py  app_trt.py  emg_artifacts.py  robot_controller.py  runtime_trt.py  spiking_tcn_infer.py
src/io/: encoders.py
src/models/: hybrid_tcnsnn.py  snn_core.py  spiking_tcn.py  tcn.py
src/pipes/: sync_mux.py
src/schema/: emg.json  frame.json
src/semg/: ninapro.py
tests/: test_smoke.py
v0_1/: README.md
v0_1/scripts/: compare_models.py  export_onnx_emg_models.py  onnx_model_eval.py
v0_2/: README.md
