<?xml version="1.0"?>
<package format="3">
  <name>edge_snn_robot</name>
  <version>0.0.1</version>
  <description>Edge SNN robot nodes (intent + joint command mapping)</description>
  <maintainer email="ghdlwnsgh25@gmail.com">Junho Park</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <build_depend>rosidl_default_generators</build_depend> 
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
